--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,10 @@ default: &default
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: 5
+  username: olga
+  password: y91wezuvr
+  host: localhost
+  port: 8000
 
 development:
   <<: *default
@@ -29,19 +33,19 @@ development:
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  username: ni_operator
+  #username: ni_operator
 
   # The password associated with the postgres role (username).
-  password: nininini
+  #password: nininini
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
-  host: phoenix
+  #host: phoenix
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
-  port: 5432
+  #port: 5432
 
   # Schema search path. The server defaults to $user,public
   #schema_search_path: myapp,sharedapp,public
@@ -58,11 +62,11 @@ development:
 test:
   <<: *default
   database: NI_test
-  host: phoenix
-  username: ni_operator
+  #host: phoenix
+  #username: ni_operator
 
   # The password associated with the postgres role (username).
-  password: nininini
+  #password: nininini
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
